@@ -1,3 +1,9 @@
+2001-11-14  Reinhard Max  <max@suse.de>
+
+	* tkchat.tcl: Added "Close" button to info windows.
+	Added "Save Options" command to the file menu.
+	Changed format of config file to be better human readable/editable.
+
 2001-11-13  Ryan Casey <scfiead@hotmail.com>
 
 	* tkchat.tcl: Fixed User Info bug where windows would
